--- a/coursesMng.html
+++ b/coursesMng.html
@@ -33,16 +33,16 @@
             </div>
             <div class="main_content">
                 <div class="boxes d-flex gap-6">
-                    <div class="box">
-                        <a href="">لیست دوره ها</a>
+                    <div class="box btn_list">
+                        لیست دوره ها
                     </div>
-                    <div class="box">
-                        <a href="">افزودن دوره</a>
+                    <div class="box btn_add_data" >
+                        افزودن دوره
                     </div>
                 </div>
                 <div class="sub_content w-100 d-flex flex-col jc-center align-center py-6">
                     <div class="tbl_list_data w-100">
-                        <table>
+                        <table class="tbl">
                             <thead>
                                 <th>عنوان دوره</th>
                                 <th>دسته دوره</th>
