--- a/coursesMng.html
+++ b/coursesMng.html
@@ -68,25 +68,26 @@
                     </div>
                     <div class="frm_add_data">
                         <form class="d-flex flex-wrap jc-center align-center gap-6">
-                            <input type="text" name="" id="" placeholder="عنوان دوره">
-                            <select name="" id="">
+                            <input type="text" placeholder="عنوان دوره" class="title">
+                            <select class="category">
                                 <option value="null">دسته دوره</option>
                                 <option value="frontend">فرانت اند</option>
                                 <option value="backend">بک اند</option>
                             </select>
-                            <select name="" id="">
+                            <select class="level">
                                 <option value="null">سطح دوره</option>
                                 <option value="intro">مقدماتی</option>
                                 <option value="advance">پیشرفته</option>
                                 <option value="to-advance">صفر تا صد</option>
                             </select>
-                            <input type="text" name="" id="" placeholder="توضیحات دوره">
-                            <input type="number" name="" id="" placeholder="تعداد سرفصل ها">
-                            <input type="number" name="" id="" placeholder=" مدت دوره">
-                            <input type="number" name="" id="" placeholder="قیمت دوره">
-                            <input type="text" name="" id="" placeholder="تصویر کاور دوره">
-                            <input type="text" name="" id="" placeholder="تاریخ شروع">
-                            <input type="submit" value="ذخیره دوره">
+                            <input type="text" class="desc" placeholder="توضیحات دوره">
+                            <input type="number" class="chapter" placeholder="تعداد سرفصل ها">
+                            <input type="number" class="duration" placeholder=" مدت دوره">
+                            <input type="number" class="price" placeholder="قیمت دوره">
+                            <input type="text" class="img" placeholder="تصویر کاور دوره">
+                            <input type="text" class="date" placeholder="تاریخ شروع">
+                            <input type="submit" value="ذخیره دوره" class="btn-save-data">
+                            <input type="reset" value="پاک کردن فرم" class="btn-save-data">
                         </form>
                     </div>
                 </div>
