--- a/login.html
+++ b/login.html
@@ -22,5 +22,7 @@
             <input type="submit" value="ورود">
         </form>
     </main>
+
+    <script src="./js/app.js"></script>
 </body>
 </html>
